--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ui-model/core",
   "version": "0.2.1",
-  "main": "src/public_api.ts",
+  "main": "src/public-api.ts",
   "peerDependencies": {
     "rxjs": "^6.0.0"
   }
